Added application insight.

--- a/Cloudents.Spitball/ApplicationInsights.config
+++ b/Cloudents.Spitball/ApplicationInsights.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <ApplicationInsights xmlns="http://schemas.microsoft.com/ApplicationInsights/2013/Settings">
   <TelemetryInitializers>
     <Add Type="Microsoft.ApplicationInsights.DependencyCollector.HttpDependenciesParsingTelemetryInitializer, Microsoft.AI.DependencyCollector" />
@@ -96,11 +96,6 @@
     </Add>
   </TelemetryProcessors>
   <TelemetryChannel Type="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel.ServerTelemetryChannel, Microsoft.AI.ServerTelemetryChannel" />
-  <!-- 
-    Learn more about Application Insights configuration with ApplicationInsights.config here: 
-    http://go.microsoft.com/fwlink/?LinkID=513840
-    
-    Note: If not present, please add <InstrumentationKey>Your Key</InstrumentationKey> to the top of this file.
-  -->
+  
   <InstrumentationKey>7fd51bd7-eb8b-4f0b-8ba8-03f30ac3dad6</InstrumentationKey>
 </ApplicationInsights>
