--- a/Cloudents.Spitball/Cloudents.Spitball.csproj
+++ b/Cloudents.Spitball/Cloudents.Spitball.csproj
@@ -227,6 +227,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Scripts\app\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
