--- a/Cloudents.Spitball/compilerconfig.json
+++ b/Cloudents.Spitball/compilerconfig.json
@@ -2,5 +2,9 @@
   {
     "outputFile": "App_Themes/site.css",
     "inputFile": "App_Themes/site.less"
+  },
+  {
+    "outputFile": "App_Themes/icons.css",
+    "inputFile": "App_Themes/icons.less"
   }
 ]
