git ignore changes.

--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,7 @@ DocProject/Help/html
 # Visual Studio 2015 cache/options directory
 .vs/
 /wwwroot/dist/
-/wwwroot
+/wwwroot/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
