fixed untracked files

--- a/.gitignore
+++ b/.gitignore
@@ -101,8 +101,10 @@ DocProject/Help/html
 
 # Visual Studio 2015 cache/options directory
 .vs/
-/wwwroot/dist/
-wwwroot/
+/wwwroot/css/
+/wwwroot/lib/
+/wwwroot/scripts/
+
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
