--- a/Cloudents.Core.Spitball/Cloudents.Core.Spitball.csproj
+++ b/Cloudents.Core.Spitball/Cloudents.Core.Spitball.csproj
@@ -21,4 +21,12 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <TypeScriptCompile Include="Scripts\app.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+
 </Project>
