--- a/.gitignore
+++ b/.gitignore
@@ -102,10 +102,8 @@ DocProject/Help/html
 
 # Visual Studio 2015 cache/options directory
 .vs/
-wwwroot/css/
-wwwroot/lib/
-wwwroot/scripts/
-
+wwwroot
+!wwwroot/images/*
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
