--- a/.gitignore
+++ b/.gitignore
@@ -102,8 +102,8 @@ DocProject/Help/html
 
 # Visual Studio 2015 cache/options directory
 .vs/
-wwwroot
-!*/wwwroot/images
+wwwroot/*
+!wwwroot/images
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
