--- a/.gitignore
+++ b/.gitignore
@@ -103,7 +103,7 @@ DocProject/Help/html
 # Visual Studio 2015 cache/options directory
 .vs/
 !wwwroot/images/*
-wwwroot
+wwwroot/*
 
 
 # MSTest test Results
