--- a/.gitignore
+++ b/.gitignore
@@ -102,8 +102,9 @@ DocProject/Help/html
 
 # Visual Studio 2015 cache/options directory
 .vs/
-!wwwroot/images/*
+!wwwroot/
 wwwroot/*
+!wwwroot/images/*
 
 
 # MSTest test Results
