--- a/Cloudents.Core.Spitball/appsettings.json
+++ b/Cloudents.Core.Spitball/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "7fd51bd7-eb8b-4f0b-8ba8-03f30ac3dad6"
   }
 }
