--- a/Cloudents.Core.Spitball/package.json
+++ b/Cloudents.Core.Spitball/package.json
@@ -2,7 +2,7 @@
   "name": "myproject",
   "version": "1.0.0",
   "devDependencies": {
-    "angular": "^1.6.6"
+    "@types/angular": "^1.6.32"
   },
   "dependencies": {}
 }
