--- a/Cloudents.Core.Spitball/package.json
+++ b/Cloudents.Core.Spitball/package.json
@@ -10,16 +10,21 @@
     "extract-text-webpack-plugin": "^2.0.0-rc",
     "file-loader": "^0.9.0",
     "isomorphic-fetch": "^2.2.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "style-loader": "^0.13.1",
     "typescript": "^2.2.1",
     "url-loader": "^0.5.7",
-    "vue": "^2.2.2",
     "vue-loader": "^11.1.4",
     "vue-property-decorator": "^5.0.1",
-    "vue-router": "^2.3.0",
     "vue-template-compiler": "^2.2.2",
     "webpack": "^2.2.0",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack-hot-middleware": "^2.12.2",
+    "vue-svg-sprite": "^1.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "vue": "^2.4.2",
+    "vue-resource": "^1.3.4",
+    "vue-router": "^2.7.0"
+  }
 }
