--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -9,6 +9,9 @@
     "babel-loader": "^7.1.2",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
+    "vue-svg-loader": "^0.2.0",
     "vue": "^2.4.2",
     "vue-loader": "^13.0.4",
     "vue-resource": "^1.3.4",
