--- a/Cloudents.Web/Cloudents.Web.csproj
+++ b/Cloudents.Web/Cloudents.Web.csproj
@@ -18,6 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\api\" />
+    <Folder Include="ClientApp\store\" />
     <Folder Include="Models\" />
     <Folder Include="ClientApp\components\general\images\" />
   </ItemGroup>
