--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -20,6 +20,7 @@
     "vue-carousel": "^0.6.5",
     "vuex": "^2.4.0",
     "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.0"
+    "extract-text-webpack-plugin": "^3.0.0",
+    "tree-model": "^1.0.6"
   }
 }
