--- a/Zbang.Cloudents.Jared/Web.config
+++ b/Zbang.Cloudents.Jared/Web.config
@@ -19,7 +19,8 @@
     <add key="MS_NotificationHubName" value="Overridden by portal settings" />
     <add key="documentDbProduction" value="true" />
     <add key="CacheUse" value="true" />
-    <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://cloudentsmsg-ns.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=oePM1T/GBe2ZlaDhik3MLHNXstsM4lhnCTyRTBi0bmQ=" /></appSettings>
+    <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://cloudentsmsg-ns.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=oePM1T/GBe2ZlaDhik3MLHNXstsM4lhnCTyRTBi0bmQ=" />
+  </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
@@ -30,18 +31,18 @@
   -->
   <system.web>
     <httpRuntime targetFramework="4.5" />
-    <compilation debug="true" targetFramework="4.6.2" />
+    <compilation debug="true" targetFramework="4.7" />
     <customErrors mode="Off" />
-  <!--<caching>
+    <!--<caching>
       <outputCache defaultProvider="MyRedisOutputCache">
         <providers>
           <add name="MyRedisOutputCache" type="Microsoft.Web.Redis.RedisOutputCacheProvider" host="zboxcache.redis.cache.windows.net" accessKey="CxHKyXDx40vIS5EEYT0UfnVIR1OJQSPrNnXFFdi3UGI=" ssl="true" />
         </providers>
       </outputCache>
     </caching>-->
-  <httpModules>
-  <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
-  </httpModules>
+    <httpModules>
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
+    </httpModules>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
