--- a/Cloudents.Web/appsettings.json
+++ b/Cloudents.Web/appsettings.json
@@ -4,6 +4,9 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "AzureSearch": {
+    "SearchServiceName": "Put your search service name here",
+    "SearchServiceAdminApiKey": "Put your primary or secondary API key here",
   }
-
 }
