Change azure worker role service to .net 4.7 and added install.cmd
some refactoring

--- a/Cloudents.Web/appsettings.json
+++ b/Cloudents.Web/appsettings.json
@@ -3,10 +3,10 @@
     "InstrumentationKey": "7fd51bd7-eb8b-4f0b-8ba8-03f30ac3dad6"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:on0rodxe8f.database.windows.net;Database=ZBoxNew;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;"
   },
   "AzureSearch": {
-    "SearchServiceName": "Put your search service name here",
-    "SearchServiceAdminApiKey": "Put your primary or secondary API key here",
+    "SearchServiceName": "cloudents",
+    "SearchServiceAdminApiKey": "5B0433BFBBE625C9D60F7330CFF103F0"
   }
 }
