--- a/Cloudents.Core/Cloudents.Core.csproj
+++ b/Cloudents.Core/Cloudents.Core.csproj
@@ -48,6 +48,11 @@
     <Compile Include="Extension\List.cs" />
     <Compile Include="Interfaces\IAI.cs" />
     <Compile Include="Interfaces\IDocumentSearch.cs" />
+    <Compile Include="Interfaces\IFlashcardSearch.cs" />
+    <Compile Include="Interfaces\IKeyGenerator.cs" />
+    <Compile Include="Interfaces\IQuestionSearch.cs" />
+    <Compile Include="Interfaces\IReadRepository.cs" />
+    <Compile Include="Interfaces\IReadRepositorySingle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request\SearchQuery.cs" />
   </ItemGroup>
