--- a/Cloudents.Web/appsettings.Development.json
+++ b/Cloudents.Web/appsettings.Development.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=Zbox;Integrated Security=SSPI;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;"
   }
 }
