--- a/Cloudents.Infrastructure/packages.config
+++ b/Cloudents.Infrastructure/packages.config
@@ -1,12 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="4.2.0" targetFramework="net47" />
+  <package id="Autofac" version="4.6.1" targetFramework="net47" />
+  <package id="AutoMapper" version="5.2.0" targetFramework="net47" />
   <package id="Dapper" version="1.50.2" targetFramework="net47" />
   <package id="Google.Apis" version="1.19.0" targetFramework="net47" />
   <package id="Google.Apis.Core" version="1.19.0" targetFramework="net47" />
   <package id="Google.Apis.Customsearch.v1" version="1.19.0.466" targetFramework="net47" />
-  <package id="log4net" version="2.0.3" targetFramework="net47" />
+  <package id="log4net" version="2.0.8" targetFramework="net47" />
+  <package id="Microsoft.Azure.Search" version="4.0.1-preview" targetFramework="net47" />
   <package id="Microsoft.Cognitive.LUIS" version="2.0.2" targetFramework="net47" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.9" targetFramework="net47" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.10" targetFramework="net47" />
+  <package id="Microsoft.Spatial" version="7.2.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
   <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="net47" />
 </packages>
