--- a/Zbang.Zbox.WorkerRoleSearch/app.config
+++ b/Zbang.Zbox.WorkerRoleSearch/app.config
@@ -1,72 +1,72 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="abot" type="Abot.Core.AbotConfigurationSectionHandler, Abot"/>
-    <section name="abotX" type="AbotX.Core.AbotXConfigurationSectionHandler, AbotX"/>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <section name="abot" type="Abot.Core.AbotConfigurationSectionHandler, Abot" />
+    <section name="abotX" type="AbotX.Core.AbotXConfigurationSectionHandler, AbotX" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <abot>
-    <crawlBehavior maxConcurrentThreads="1" maxPagesToCrawl="0" maxPagesToCrawlPerDomain="0" maxPageSizeInBytes="0" userAgentString="Mozilla/5.0 (Windows NT 6.3; Trident/7.0; rv:11.0) like Gecko" crawlTimeoutSeconds="0" downloadableContentTypes="text/html, text/plain, application/xml, text/xml, application/octet-stream" isUriRecrawlingEnabled="false" isExternalPageCrawlingEnabled="false" isExternalPageLinksCrawlingEnabled="false" httpServicePointConnectionLimit="200" httpRequestTimeoutInSeconds="15" httpRequestMaxAutoRedirects="7" isHttpRequestAutoRedirectsEnabled="true" isHttpRequestAutomaticDecompressionEnabled="true" isSendingCookiesEnabled="false" isSslCertificateValidationEnabled="false" isRespectUrlNamedAnchorOrHashbangEnabled="false" minAvailableMemoryRequiredInMb="0" maxMemoryUsageInMb="0" maxMemoryUsageCacheTimeInSeconds="0" maxCrawlDepth="1000" maxLinksPerPage="0" isForcedLinkParsingEnabled="false" maxRetryCount="0" minRetryDelayInMilliseconds="0"/>
-    <authorization isAlwaysLogin="false" loginUser="" loginPassword=""/>
-    <politeness isRespectRobotsDotTextEnabled="true" isRespectMetaRobotsNoFollowEnabled="true" isRespectHttpXRobotsTagHeaderNoFollowEnabled="true" isRespectAnchorRelNoFollowEnabled="true" isIgnoreRobotsDotTextIfRootDisallowedEnabled="true" robotsDotTextUserAgentString="abot" maxRobotsDotTextCrawlDelayInSeconds="5" minCrawlDelayPerDomainMilliSeconds="0"/>
+    <crawlBehavior maxConcurrentThreads="1" maxPagesToCrawl="0" maxPagesToCrawlPerDomain="0" maxPageSizeInBytes="0" userAgentString="Mozilla/5.0 (Windows NT 6.3; Trident/7.0; rv:11.0) like Gecko" crawlTimeoutSeconds="0" downloadableContentTypes="text/html, text/plain, application/xml, text/xml, application/octet-stream" isUriRecrawlingEnabled="false" isExternalPageCrawlingEnabled="false" isExternalPageLinksCrawlingEnabled="false" httpServicePointConnectionLimit="200" httpRequestTimeoutInSeconds="15" httpRequestMaxAutoRedirects="7" isHttpRequestAutoRedirectsEnabled="true" isHttpRequestAutomaticDecompressionEnabled="true" isSendingCookiesEnabled="false" isSslCertificateValidationEnabled="false" isRespectUrlNamedAnchorOrHashbangEnabled="false" minAvailableMemoryRequiredInMb="0" maxMemoryUsageInMb="0" maxMemoryUsageCacheTimeInSeconds="0" maxCrawlDepth="1000" maxLinksPerPage="0" isForcedLinkParsingEnabled="false" maxRetryCount="0" minRetryDelayInMilliseconds="0" />
+    <authorization isAlwaysLogin="false" loginUser="" loginPassword="" />
+    <politeness isRespectRobotsDotTextEnabled="true" isRespectMetaRobotsNoFollowEnabled="true" isRespectHttpXRobotsTagHeaderNoFollowEnabled="true" isRespectAnchorRelNoFollowEnabled="true" isIgnoreRobotsDotTextIfRootDisallowedEnabled="true" robotsDotTextUserAgentString="abot" maxRobotsDotTextCrawlDelayInSeconds="5" minCrawlDelayPerDomainMilliSeconds="0" />
   </abot>
   <abotX maxConcurrentSiteCrawls="1" sitesToCrawlBatchSizePerRequest="25" minSiteToCrawlRequestDelayInSecs="15" isJavascriptRenderingEnabled="true" javascriptRenderingWaitTimeInMilliseconds="7000">
-    <autoThrottling isEnabled="true" thresholdMed="5" thresholdHigh="10" thresholdTimeInMilliseconds="7000" minAdjustmentWaitTimeInSecs="30"/>
-    <autoTuning isEnabled="true" cpuThresholdMed="65" cpuThresholdHigh="85" minAdjustmentWaitTimeInSecs="30"/>
-    <accelerator concurrentSiteCrawlsIncrement="2" concurrentRequestIncrement="2" delayDecrementInMilliseconds="2000" minDelayInMilliseconds="0" concurrentRequestMax="10" concurrentSiteCrawlsMax="3"/>
-    <decelerator concurrentSiteCrawlsDecrement="2" concurrentRequestDecrement="2" delayIncrementInMilliseconds="2000" maxDelayInMilliseconds="15000" concurrentRequestMin="1" concurrentSiteCrawlsMin="1"/>
+    <autoThrottling isEnabled="true" thresholdMed="5" thresholdHigh="10" thresholdTimeInMilliseconds="7000" minAdjustmentWaitTimeInSecs="30" />
+    <autoTuning isEnabled="true" cpuThresholdMed="65" cpuThresholdHigh="85" minAdjustmentWaitTimeInSecs="30" />
+    <accelerator concurrentSiteCrawlsIncrement="2" concurrentRequestIncrement="2" delayDecrementInMilliseconds="2000" minDelayInMilliseconds="0" concurrentRequestMax="10" concurrentSiteCrawlsMax="3" />
+    <decelerator concurrentSiteCrawlsDecrement="2" concurrentRequestDecrement="2" delayIncrementInMilliseconds="2000" maxDelayInMilliseconds="15000" concurrentRequestMin="1" concurrentSiteCrawlsMin="1" />
   </abotX>
   <log4net>
     <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="[%date] [%thread] [%-5level] - %message - [%logger]%newline"/>
+        <conversionPattern value="[%date] [%thread] [%-5level] - %message - [%logger]%newline" />
       </layout>
     </appender>
     <appender name="AbotAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="abotlog.txt"/>
-      <appendToFile value="true"/>
-      <rollingStyle value="Size"/>
-      <maxSizeRollBackups value="10"/>
-      <maximumFileSize value="10240KB"/>
-      <staticLogFileName value="true"/>
-      <preserveLogFileNameExtension value="true"/>
+      <file value="abotlog.txt" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="10240KB" />
+      <staticLogFileName value="true" />
+      <preserveLogFileNameExtension value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="[%date] [%thread] [%-5level] - %message - [%logger]%newline"/>
+        <conversionPattern value="[%date] [%thread] [%-5level] - %message - [%logger]%newline" />
       </layout>
     </appender>
     <appender name="AbotXAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="Logs\AbotXLog.txt"/>
-      <appendToFile value="true"/>
-      <rollingStyle value="Size"/>
-      <maxSizeRollBackups value="10"/>
-      <maximumFileSize value="10240KB"/>
-      <staticLogFileName value="true"/>
-      <preserveLogFileNameExtension value="true"/>
+      <file value="Logs\AbotXLog.txt" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="10240KB" />
+      <staticLogFileName value="true" />
+      <preserveLogFileNameExtension value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="[%date] [%-3thread] [%-5level] - %message%newline"/>
+        <conversionPattern value="[%date] [%-3thread] [%-5level] - %message%newline" />
       </layout>
     </appender>
     <logger name="AbotLogger">
-      <level value="Info"/>
-      <appender-ref ref="aiAppender"/>
+      <level value="Info" />
+      <appender-ref ref="aiAppender" />
     </logger>
     <logger name="NHibernate">
-      <level value="WARN"/>
+      <level value="WARN" />
     </logger>
     <logger name="NHibernate.SQL">
-      <level value="Info"/>
+      <level value="Info" />
     </logger>
     <logger name="AbotXLogger">
-      <level value="Info"/>
-      <appender-ref ref="aiAppender"/>
+      <level value="Info" />
+      <appender-ref ref="aiAppender" />
     </logger>
     <root>
-      <level value="ALL"/>
-      <appender-ref ref="aiAppender"/>
+      <level value="ALL" />
+      <appender-ref ref="aiAppender" />
     </root>
     <appender name="aiAppender" type="Microsoft.ApplicationInsights.Log4NetAppender.ApplicationInsightsAppender, Microsoft.ApplicationInsights.Log4NetAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="[%date] [%-3thread] [%-5level] - %message%newline"/>
+        <conversionPattern value="[%date] [%-3thread] [%-5level] - %message%newline" />
       </layout>
     </appender>
   </log4net>
@@ -74,78 +74,78 @@
     <trace>
       <listeners>
         <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
-          <filter type=""/>
+          <filter type="" />
         </add>
         <!--<add name="myAppInsightsListener" type="Microsoft.ApplicationInsights.TraceListener.ApplicationInsightsTraceListener, Microsoft.ApplicationInsights.TraceListener" />-->
       </listeners>
     </trace>
   </system.diagnostics>
   <connectionStrings>
-    <add name="SpamGun" connectionString="Server=tcp:on0rodxe8f.database.windows.net;Database=spamgun;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient"/>
+    <add name="SpamGun" connectionString="Server=tcp:on0rodxe8f.database.windows.net;Database=spamgun;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
-    <gcServer enabled="true"/>
+    <gcServer enabled="true" />
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
-				<assemblyIdentity name="Autofac" publicKeyToken="17863AF14B0044DA" culture="neutral"/>
-				<bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0"/>
+				<assemblyIdentity name="Autofac" publicKeyToken="17863AF14B0044DA" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0" />
 			</dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.WindowsAzure.Storage" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-8.1.4.0" newVersion="8.1.4.0"/>
+        <assemblyIdentity name="Microsoft.WindowsAzure.Storage" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.1.4.0" newVersion="8.1.4.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0"/>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.8.1.0" newVersion="5.8.1.0"/>
+        <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.8.1.0" newVersion="5.8.1.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.8.1.0" newVersion="5.8.1.0"/>
+        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.8.1.0" newVersion="5.8.1.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.WindowsAzure.ServiceRuntime" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="0.0.0.0-2.7.0.0" newVersion="2.7.0.0"/>
+        <assemblyIdentity name="Microsoft.WindowsAzure.ServiceRuntime" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-2.7.0.0" newVersion="2.7.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.WindowsAzure.Diagnostics" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-2.7.0.0" newVersion="2.7.0.0"/>
+        <assemblyIdentity name="Microsoft.WindowsAzure.Diagnostics" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.7.0.0" newVersion="2.7.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Runtime.Serialization" publicKeyToken="b77a5c561934e089" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
+        <assemblyIdentity name="System.Runtime.Serialization" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-4.1.0.4000" newVersion="4.1.0.4000"/>
+        <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.0.4000" newVersion="4.1.0.4000" />
       </dependentAssembly>
       <!--<dependentAssembly>
         <assemblyIdentity name="MiniProfiler" publicKeyToken="b44f9351044011a3" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.11.0" newVersion="3.0.11.0" />
       </dependentAssembly>-->
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.AI.Agent.Intercept" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-2.4.0.0" newVersion="2.4.0.0"/>
+        <assemblyIdentity name="Microsoft.AI.Agent.Intercept" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.4.0.0" newVersion="2.4.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.8.1.0" newVersion="5.8.1.0"/>
+        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.8.1.0" newVersion="5.8.1.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.ApplicationInsights" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-2.4.0.0" newVersion="2.4.0.0"/>
+        <assemblyIdentity name="Microsoft.ApplicationInsights" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.4.0.0" newVersion="2.4.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-2.0.8.0" newVersion="2.0.8.0"/>
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.8.0" newVersion="2.0.8.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" /></startup></configuration>
