--- a/Cloudents.Core/Cloudents.Core.csproj
+++ b/Cloudents.Core/Cloudents.Core.csproj
@@ -46,8 +46,10 @@
     <Compile Include="Enum\AIResult.cs" />
     <Compile Include="DTOs\AIDto.cs" />
     <Compile Include="DTOs\SearchResult.cs" />
+    <Compile Include="Enum\SearchRequestFilter.cs" />
     <Compile Include="Enum\SearchRequestSort.cs" />
     <Compile Include="Extension\List.cs" />
+    <Compile Include="Extension\UriBuilder.cs" />
     <Compile Include="Interfaces\IAI.cs" />
     <Compile Include="Interfaces\IDocumentSearch.cs" />
     <Compile Include="Interfaces\IFlashcardSearch.cs" />
@@ -57,6 +59,7 @@
     <Compile Include="Interfaces\IReadRepositorySingle.cs" />
     <Compile Include="Interfaces\ITutorSearch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\Location.cs" />
     <Compile Include="Request\SearchQuery.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
