--- a/Zbang.Cloudents.Jared/Web.config
+++ b/Zbang.Cloudents.Jared/Web.config
@@ -19,6 +19,8 @@
     <add key="MS_NotificationHubName" value="Overridden by portal settings" />
     <add key="documentDbProduction" value="true" />
     <add key="CacheUse" value="true" />
+    <add key="AzureSearchKey" value="5B0433BFBBE625C9D60F7330CFF103F0" />
+    <add key="AzureSearchServiceName" value="cloudents" />
     <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://cloudentsmsg-ns.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=oePM1T/GBe2ZlaDhik3MLHNXstsM4lhnCTyRTBi0bmQ=" />
   </appSettings>
   <!--
