--- a/Zbang.Cloudents.Jared/packages.config
+++ b/Zbang.Cloudents.Jared/packages.config
@@ -5,7 +5,6 @@
   <package id="Autofac.SignalR" version="3.0.2" targetFramework="net462" />
   <package id="Autofac.WebApi2" version="4.1.0" targetFramework="net462" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net45" />
-  <package id="Google.Apis.Core" version="1.19.0" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net462" />
@@ -44,6 +43,13 @@
   <package id="Strathweb.CacheOutput.WebApi2" version="0.10.0" targetFramework="net462" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net462" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.4.403061554" targetFramework="net462" />
+  <package id="System.IO" version="4.3.0" targetFramework="net47" />
+  <package id="System.Net.Http" version="4.3.1" targetFramework="net47" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net47" />
   <package id="System.Spatial" version="5.8.2" targetFramework="net462" />
   <package id="WindowsAzure.ServiceBus" version="4.1.2" targetFramework="net462" />
   <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="net462" />
