--- a/Cloudents.Core/Cloudents.Core.csproj
+++ b/Cloudents.Core/Cloudents.Core.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -64,8 +65,9 @@
     <Compile Include="Interfaces\ITitleSearch.cs" />
     <Compile Include="Interfaces\ITutorSearch.cs" />
     <Compile Include="Interfaces\IVideoSearch.cs" />
+    <Compile Include="Models\GeoPoint.cs" />
+    <Compile Include="Models\GeoPointConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\Location.cs" />
     <Compile Include="Request\SearchQuery.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
