Finish book api serach

--- a/Cloudents.Core/Cloudents.Core.csproj
+++ b/Cloudents.Core/Cloudents.Core.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTOs\BookSearchDto.cs" />
     <Compile Include="DTOs\JobDto.cs" />
     <Compile Include="DTOs\TutorDto.cs" />
     <Compile Include="DTOs\UniversitySynonymDto.cs" />
