--- a/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
+++ b/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Search\Entities\Tutor.cs" />
     <Compile Include="Search\FlashcardSearch.cs" />
     <Compile Include="Search\JobSearch.cs" />
+    <Compile Include="Search\PurchaseSearch.cs" />
     <Compile Include="Search\QuestionSearch.cs" />
     <Compile Include="Search\TitleSearch.cs" />
     <Compile Include="Search\TutorSearch.cs" />
